// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpellCheck provider #buildReasonString returns the expected string with some corrections 1`] = `
Array [
  Object {
    "line": 1,
    "reason": "\\"iam\\" is misspelled. How about: correctly, spelled, words",
  },
  Object {
    "line": 1,
    "reason": "\\"wurd\\" is misspelled. How about: correctly, spelled, words",
  },
]
`;

exports[`SpellCheck provider #buildReasonString returns the expected string with zero possible corrections 1`] = `
Array [
  Object {
    "line": 1,
    "reason": "\\"iam\\" is misspelled. ",
  },
  Object {
    "line": 1,
    "reason": "\\"wurd\\" is misspelled. ",
  },
]
`;

exports[`SpellCheck provider #buildResults creates the file map with appropriate reasons 1`] = `
Map {
  "filename.md" => Array [
    Object {
      "line": 1,
      "reason": "\\"wurd\\" is misspelled. How about: correctly, spelled, words",
    },
    Object {
      "line": 1,
      "reason": "\\"iam\\" is misspelled. How about: correctly, spelled, words",
    },
  ],
  "anotherfile.md" => Array [
    Object {
      "line": 1,
      "reason": "\\"Tenis\\" is misspelled. How about: correctly, spelled, words",
    },
    Object {
      "line": 1,
      "reason": "\\"sporq\\" is misspelled. How about: correctly, spelled, words",
    },
  ],
  "gibberish.md" => Array [
    Object {
      "line": 1,
      "reason": "\\"AbsdfsdalkjhfthjsdfsdfAbsdfsdalkjhfthjsdfsdfAbsdfs\\" is misspelled. How about: correctly, spelled, words",
    },
  ],
  "technical-doc.md" => Array [],
}
`;
